--- a/Java/设计模式/创建型模式.md
+++ b/Java/设计模式/创建型模式.md
@@ -7,21 +7,79 @@
 * [建造者模式](#Builder):将一个复杂对象分解成多个相对简单的部分，然后根据不同需要分别创建它们，最后构建出该复杂对象。
 
 ##<span id="Singleton">单例模式</span>
+###1.概述
+指一个类只有一个实例，且该类能自行创建这个实例的一种模式。
+
+单例模式是设计模式最简单的模式之一。通常，普通类的构造函数时公有的，外部类可以通过new 构造函数() 来生成多个实例。但是，如果将类的构造函数设为私有的，外部类就无法调用该构造函数，也就无法生成多个实例。这时该类需要定义一个 **静态私有实例**，并向外提供一个静态的共有函数用于创建或获取该静态私有实例。
+
+
+###2.特点
+1.单例模式只有实例对象
+2.该单例对象必须由单例类自行创建
+3.单例类对外提供一个访问该单例的全局访问点
+
+
+
+###3.类图
+单例模式的主要角色如下
+* 单例类：包含一个实例且能自行创建这个实例的类
+* 访问类，使用单例的类
+![图 1](../../images/73b9dcb73be4555e1f77f4bd5390492bcb3b34eb2c010e347061d92806cec6f3.png)  
+
+###4.实现
+
+单例模式通常有两种实现方式：
+
+####1.饿汉式单例
+该模式的特点是 类一旦加载就创建一个单例，保证在调用getInstance方法之前单例已经存在了
+```java
+public class HungrySingleton {
+    private static final HungrySingleton instance = new HungrySingleton();
+    private HungrySingleton() {
+    }
+    public static HungrySingleton getInstance() {
+        return instance;
+    }
+}
+```
+饿汉式单例在类创建的同时就已经创建好一个静态的对象供系统使用，以后不再改变，所以是线程安全的，可以直接用于多线程而不会出现问题。
+
+
+####2.懒汉式单例
+该模式的特点是类加载时没有生成单例，只有当第一次调用 getlnstance 方法时才去创建这个单例。代码如下：
+```java
+public class LazySingleton {
+    private static volatile LazySingleton instance = null;    //保证 instance 在所有线程中同步
+    private LazySingleton() {
+    }    //private 避免类在外部被实例化
+    public static synchronized LazySingleton getInstance() {
+        //getInstance 方法前加同步
+        if (instance == null) {
+            instance = new LazySingleton();
+        }
+        return instance;
+    }
+}
+```
+注意：如果编写的是多线程程序，则不要删除上例代码中的关键字 volatile 和 synchronized，否则将存在线程非安全的问题。如果不删除这两个关键字就能保证线程安全，但是每次访问时都要同步，会影响性能，且消耗更多的资源，这是懒汉式单例的缺点。
+
+
+
 
 ##<span id="Prototype">原型模式</span>
 
 
 ##简单工厂模式(Simple Factory)
-1.概述(不属于23种设计模式)
+###1.概述(不属于23种设计模式)
 在**创建一个对象时**不向客户暴露内部细节，并提供一个**创建对象的通用接口**。简单工厂把**实例化**的操作单独放到一个类中，这个类就成了**简单工厂类**，让**简单工厂类**来决定应该实例化哪个具体子类。 
 **创建对象的任务交给简单工厂。**
 
 这样做能把客户类和具体子类的实现解耦，**客户类不再需要知道有哪些子类以及应当实例化哪个子类**。客户类往往有多个，如果不使用简单工厂，那么所有的客户类都要知道所有子类的细节。而且一旦子类发生改变，例如增加子类，那么所有的客户类都要进行修改。
 
-2.类图
+###2.类图
 ![图 2](../../images/e3e1eae5edb5d2d720d3d70b807bca57f6cf6c681960d17631a4821a2bb894d7.png)  
 
-3.实现
+###3.实现
 ```Java
 // 产品接口
 public interface Product {
@@ -256,7 +314,7 @@ public class Client {
 ```
 抽象工厂最大的好处是**易于交换产品系列**。抽象工厂模式的另一个好处就是它让具体的创建实例过程与客户端分离。客户端是通过它们的抽象接口操作实例，产品实现类的具体类名也被具体的工厂实现类分离，不会出现在客户端代码中。
 
-##建造者模式
+##<span id=Builder>建造者模式</span>
 1.概述
 封装一个对象的  **构造过程**，并允许按**步骤**构造。适用于构造复杂对象的一种模式。
 它是将一个复杂对象的构造 与它的表示分离，使同样的构造过程可以创建不同的表示（spring？的依赖注入）
