--- a/Java/Spring/5.Spring AOP.md
+++ b/Java/Spring/5.Spring AOP.md
@@ -183,7 +183,8 @@ public interface PointcutAdvisor extends Advisor {
 
 ###初始化总结
 * Spring 加载 自动代理器AnnotationAwareAspectJAutoCreator,当作一个系统组件
-* 当一个bean加载到spring中，会触发自动代理器的bean后置处理，然后会先扫描bean所有的Advisor
+* 当一个bean加载到spring中，会触发自动代理器的bean后置处理，然后会先扫描bean所有的Advisor->在这里会根据@Aspect，@Async等生成Advisor
+  Advisor类架构==https://blog.csdn.net/u012422440/article/details/87924776==
 * 然后用Advisor和其他参数构建ProxyFactory
 * ProxyFactory会跟剧配置和目标对象的类型寻找代理的方式（JDK动态代理或CGLIG代理）
 * 然后代理出来的对象放回context，完成Spring AOP代理
