--- a/Java/JAVA虚拟机/1.JAVA内存区域.md
+++ b/Java/JAVA虚拟机/1.JAVA内存区域.md
@@ -4,11 +4,11 @@
 
 ### JAVA内存结构
 
-![JVM内存结构.jpg](https://cdn.nlark.com/yuque/0/2020/jpeg/1266758/1586828131069-3c2041fb-d254-414c-a3ab-5b3673990be1.jpeg)
+![](images/2021-04-20-16-57-38.png)
 
 * 根据线程划分的内存模型
 
-![JVM线程内存结构.jpg](https://cdn.nlark.com/yuque/0/2020/jpeg/1266758/1586828210341-73dfbc31-682b-40bd-9e9b-9f6078789bdb.jpeg?x-oss-process=image%2Fwatermark%2Ctype_d3F5LW1pY3JvaGVp%2Csize_10%2Ctext_THVrYQ%3D%3D%2Ccolor_FFFFFF%2Cshadow_50%2Ct_80%2Cg_se%2Cx_10%2Cy_10)
+![](images/2021-04-20-16-57-58.png)
 
 ### 程序计数器
 
@@ -100,8 +100,7 @@
 
       * 其他状态
 
-        ![image-20201127154743193](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20201127154743193.png)
-
+        ![](images/2021-04-20-16-58-24.png)
   * **第二部分信息： 类型指针**  
 
     * 虚拟机通过这个指针确定对象是哪个类的实例
@@ -121,10 +120,10 @@
 
 * **句柄**
   * 对象被移动时(GC时移动对象)，只需要改变句柄中的实例数据指针，reference本身不用修改。对象类型数据可以认为是.class文件数据
+![](images/2021-04-20-16-58-46.png)
 
-![image-20201127155239343](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20201127155239343.png)
 
 * **直接指针**
   * 速度更快，节省一次指针定位的时间开销
 
-![image-20201127155328212](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20201127155328212.png)
+![](images/2021-04-20-16-58-58.png)
