--- a/Java/JAVA虚拟机/2.垃圾收集器与内存分配策略.md
+++ b/Java/JAVA虚拟机/2.垃圾收集器与内存分配策略.md
@@ -60,8 +60,7 @@
   * 效率：标记和清除的两个过程效率都不高
   * 空间：标记清除之后会产生大量不连续的内存碎片，导致后续分配大内存时没有没有足够的连续内存不得不提前出发另一次垃圾收集动作GC
 
-![image-20201130153649850](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20201130153649850.png)
-
+![](images/2021-04-20-16-59-53.png)
 
 
 ### **复制算法**（解决效率问题）
@@ -84,7 +83,7 @@
   * 使用Eden空间和其中一块Survivor分配内存，回收时将活着的对象复制到另一个Survivor上，最后清理使用的Eden和Survivor空间
   * 如果存活对象超过10%，Survivor空间不够时直接分配到老年代
 
-  ![image-20201130154653808](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20201130154653808.png)
+![](images/2021-04-20-17-00-20.png)
 
 
 
@@ -95,8 +94,8 @@
 * 思路
 
   * 标记过程和标记-清除算法一样，标记完后不直接清理而是让存活的对象都向一端移动，然后直接清理端边界以外的内存
+![](images/2021-04-20-17-00-41.png)
 
-    ![image-20201130155122098](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20201130155122098.png)
 
 ### **分代收集算法**
 
@@ -150,14 +149,14 @@ JVM只会在特定位置放置safepoint，比如：
   * 单线程的收集器
   * GC时，必须暂停其他所有的工作线程
   * Serial收集器对于运行在Client模式下的虚拟机来说是一个很好的 选择。 
+![](images/2021-04-20-17-01-22.png)
 
-![image-20201130163219106](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20201130163219106.png)
 
 * **ParNew收集器**
   * Serial收集器的多线程版本
   * Server模式下首选的新生代收集器，有一个原因是目前只有它可以和CMS收集配合工作
+![](images/2021-04-20-17-01-35.png)
 
-![image-20201130163442349](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20201130163442349.png)
 
 ●并行（Parallel）：指多条垃圾收集线程并行工作，但此时用户线程仍然处于等待状态。
 ●并发（Concurrent）：指用户线程与垃圾收集线程同时执行（但不一定是并行的，可能 会交替执行），用户程序在继续运行，而垃圾收集程序运行于另一个CPU上
@@ -243,9 +242,7 @@ JVM只会在特定位置放置safepoint，比如：
       - Remembered Set记录老年代引用新生代对象的关系
       - 新生代GC Roots=新生代GC Root+Remembered Set
 
-![image-20201130170648773](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20201130170648773.png)
-
-
+![](images/2021-04-20-17-02-52.png)
 
 
 
