--- a/Java/JAVA虚拟机/4.虚拟机类加载机制.md
+++ b/Java/JAVA虚拟机/4.虚拟机类加载机制.md
@@ -15,7 +15,7 @@
 
 * 类从加载到虚拟机内存中开始，到卸载出内存位置，它的整个生命周期包括：
 
-  ![image-20201203171954905](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20201203171954905.png)
+ ![](images/2021-04-20-17-09-57.png)
 
 * 加载、验证、准备、初始化和卸载这5个阶段的顺序是确定的
 * 解析阶段则不一定:它在某些情况下可以在初始化阶段之后再开始
@@ -38,9 +38,9 @@
 
   * 通过一个类的全限定名来获取定义此类的二进制字节流（class文件？）
 
-    * - - 没有限制从什么地方获取，可以使用自定义类加载器，这是众多Java技术的基础（PowerMockito使用了自定义类加载器）
+    *  没有限制从什么地方获取，可以使用自定义类加载器，这是众多Java技术的基础（PowerMockito使用了自定义类加载器）
 
-    - - - - 1.从jar包获取
+    -  1.从jar包获取
           - 2.从网络获取，如Applet
           - 3.运算时计算生成，如动态代理技术完成对原功能的增强，在java.lang.reflect.Proxy中，就是利用ProxyGenerator.generateProxyClass来为特定的接口生成形式为"*$Proxy"的代理类的二进制字节流
           - 4.其他文件生成，如由JSP文件生成Class类
@@ -139,19 +139,19 @@
     * 开发者可以使用这个类加载器
     * 如何应用程序没有自定义加载器，一般情况下默认使用这个类加载器
 
-    ![image-20201203201828117](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20201203201828117.png)
+   ![](images/2021-04-20-17-11-03.png)
 
 * 双亲委派模型
 
   ​		双亲委派模型的工作过程是：如果一个类加载器收到了类加载的请求，它首先不会自己 去尝试加载这个类，而是把这个请求委派给父类加载器去完成，每一个层次的类加载器都是 如此，因此所有的加载请求最终都应该传送到顶层的启动类加载器中，只有当父加载器反馈自己无法完成这个加载请求（它的搜索范围中没有找到所需的类）时，子加载器才会尝试自 己去加载。 
 
-  - - 双亲委派模型保证了，无论哪个加载器要加载某个类，都是由同一个类加载器进行加载，保证了某个类在各种类加载器环境中都是同一个类
+  -  双亲委派模型保证了，无论哪个加载器要加载某个类，都是由同一个类加载器进行加载，保证了某个类在各种类加载器环境中都是同一个类
 
-  - - - 例如，用户自己写了java.lang.Object类放在ClassPath下，不使用该模型的话，就有可能加载到不同的Object类
+  -  例如，用户自己写了java.lang.Object类放在ClassPath下，不使用该模型的话，就有可能加载到不同的Object类
 
-  - * 双亲委派模型保证了越基础的类越上层的加载器进行加载
+  - 双亲委派模型保证了越基础的类越上层的加载器进行加载
 
-![双亲委派模型.png](https://cdn.nlark.com/yuque/0/2020/png/1266758/1586834262259-688884e9-8898-41a9-a488-267efb94f1dd.png)
+![](images/2021-04-20-17-11-29.png)
 
 
 
