--- a/Java/JAVA虚拟机/5.虚拟机字节码执行引擎.md
+++ b/Java/JAVA虚拟机/5.虚拟机字节码执行引擎.md
@@ -12,8 +12,7 @@
 
 * 一个线程中的方法调用链可能很长，在活动线程中，只有栈顶的栈帧才是有效的（当前栈帧），所有字节码指令都只针对栈顶栈帧
 
-  ![image-20201204201350212](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20201204201350212.png)
-
+ ![](images/2021-04-20-17-12-49.png)
 ### 局部变量表
 
 * 存放方法参数和方法内部定义的局部变量
@@ -45,8 +44,7 @@
 * 操作数栈元素的数据类型必须与字节码指令的序列**严格匹配**
 
 （ 算术运算，在调用其他方法的时候通过操作数栈传递参数）
-
-![image-20201204211143453](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20201204211143453.png)
+![](images/2021-04-20-17-14-19.png)
 
 ### 动态连接
 
@@ -177,4 +175,4 @@ public class DynamicDispatch {
 
 * 虚方法表
 
-![虚方法表.jpg](https://cdn.nlark.com/yuque/0/2020/jpeg/1266758/1586835000564-5fa0a6e3-2589-4898-947e-b9c904c1ccfc.jpeg?x-oss-process=image%2Fwatermark%2Ctype_d3F5LW1pY3JvaGVp%2Csize_10%2Ctext_THVrYQ%3D%3D%2Ccolor_FFFFFF%2Cshadow_50%2Ct_80%2Cg_se%2Cx_10%2Cy_10)
+![](images/2021-04-20-17-14-35.png)
