--- a/Java/JAVA虚拟机/6.编译期优化.md
+++ b/Java/JAVA虚拟机/6.编译期优化.md
@@ -28,11 +28,10 @@
 
   * Javac编译过程图
 
-  ![image-20201216110518198](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20201216110518198.png)
-
+ ![](images/2021-04-20-17-15-30.png)
   * Javac编译过程主体代码
 
-![image-20201216110530885](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20201216110530885.png)
+![](images/2021-04-20-17-15-42.png)
 
 
 
