--- a/Java/Java面经/项目/项目设计.md
+++ b/Java/Java面经/项目/项目设计.md
@@ -11,8 +11,9 @@
 ##项目内容：
 * 可上传（curd）已经优化后的城市分布，最优解，解的顺序，
 * 可查询 benchmark 并显示最优解并且下载 
+* 利用netty进行文件传输
 * 利用dubbo将服务接口暴露出来，调用如  算法优化，以及特征映射求解
-* 利用消息队列将 请求的命令 放到队列里，异步对任务进行解耦，例如 任务之间地矩阵，源任务的求解。
+* 利用消息队列将 **请求的命令** 放到队列里，异步对任务进行解耦，例如 任务之间地矩阵，源任务的求解。
 * 进行账号登记等功能
 
 
