--- a/Java/Spring/9.Spring 事务用法实例与实现原理.md
+++ b/Java/Spring/9.Spring 事务用法实例与实现原理.md
@@ -75,7 +75,7 @@ public void testTransaction() {
 #### 概述
 
 Spring 数据库的事务约定如下：
-![](2021-03-19-16-31-21.png)
+![](images/2021-03-19-16-31-21.png)
 
 **声明式事务的优缺点**：
 
@@ -169,7 +169,7 @@ public @interface Transactional {
 
 ```
 
-![](2021-03-19-16-52-28.png)
+![](images/2021-03-19-16-52-28.png)
 
 
 #### @Transactional注解原理
@@ -250,13 +250,13 @@ https://github.com/nanodaemony/ShiftJava/blob/master/H%20Spring/E%20Spring%E4%BA
 
 ## 实现原理
 关于Spring事务的实现原理，是使用**AOP**实现的，AOP 在进行解析的时候，最终会生成一个Advisor对象，这个 Advisor对象中封装了织面织入所需要的所有信息，其中就包括最重要的两个部分就是 Pointcut 和 Adivce属性。 这里Pointcut 用于判断目标bean是否需要织入当前切面逻辑；Advice则封装了需要织入的切面逻辑。 如下这三个部分的简要关系图：
-![](2021-03-19-20-07-32.png)
+![](images/2021-03-19-20-07-32.png)
 
 同样的，对于Spring 事务，其既然是使用Spring Aop实现的，同样会有这三个成员。
 注册的Advisor和Advice（即BeanFactoryTransactionAttributeSourceAdvisor和TransactionInterceptor）
 
 而Pointcut则在**BeanFactoryTransactionAttributeSourceAdvisor**的源码可以发现，其内部声明了一个**TransactionAttributeSourcePointcut**类型的属性，并且直接在内部进行了实现，这就是我们需要找的Pointcut。这里这三个对象对应的关系如下：
-![](2021-03-19-20-09-17.png)
+![](images/2021-03-19-20-09-17.png)
 
 
 
