--- a/Java/JAVA虚拟机/9.线程安全与锁优化.md
+++ b/Java/JAVA虚拟机/9.线程安全与锁优化.md
@@ -66,7 +66,7 @@ cas：原子性
 * 在没有多线程竞争的前提下，减少传统的重量级锁的性能消耗（即**可以多线程交替加锁**）
 * 理解轻量级锁和下面的偏向锁必须理解HotSpot虚拟机的对象的内存布局
 
-![](2021-04-07-21-30-38.png)
+![](images/2021-04-07-21-30-38.png)
 
 #### 轻量级锁的执行过程
 * 加锁
@@ -91,7 +91,7 @@ cas：原子性
 * 在JVM启动偏向锁情况下(默认启动)，当锁对象第一次被线程获取的时候，虚拟机将会把对象头中的标志位设为01，同时使用CAS操作把获取到这个锁的的线程ID记录在Mark Word里，如果操作成功，持有偏向锁的线程以后每次进入这个锁相关的同步块时，虚拟机都可以不再进行任何同步操作(例如Locking、unlocking、更新Mark Word等)
 * 当有另外一个线程尝试获取这个锁时，偏向模式结束，后续的同步操作按照轻量级锁执行
 
-![](2021-04-07-21-47-00.png)
+![](images/2021-04-07-21-47-00.png)
 
 
 ####轻量级锁和偏向锁区别
