--- a/Java/Java面经/项目/项目设计.md
+++ b/Java/Java面经/项目/项目设计.md
@@ -11,14 +11,13 @@
 ##项目内容：
 * 可上传（curd）已经优化后的城市分布，最优解，解的顺序，
 * 可查询 benchmark 并显示最优解并且下载 
-* 利用netty进行文件传输
 * 利用dubbo将服务接口暴露出来，调用如  算法优化，以及特征映射求解
 * 利用消息队列将 **请求的命令** 放到队列里，异步对任务进行解耦，例如 任务之间地矩阵，源任务的求解。
 * 进行账号登记等功能
 
 
 
-##项目功能模块的划分：
+## 项目功能模块的划分：
 
 前端展示：暂时不考虑
 
@@ -32,4 +31,23 @@
             账号管理
 
 
-##实体表的设计
+## 实体表的设计
+
+#### 用户表（user）
+| auth_id   | user_id | username | password| create_time | last_edit_time |
+|:----| :----   |:----      |:-----  |:----        |:-----         |      
+
+#### 用户信息表(user_info)：存储用户的状态以及操作级别
+
+| user_id| name | email| enable_status | user_type | create_time |last_edit_time|
+|:----| :----| :-----|:-----|:----|:-----|:----|
+
+
+#### 任务表(task)
+| task_id | task_name| task_addr | task_scale| create_time| last_edit_time|
+|:---|:----|:---|:----|:---|:----|
+
+#### 特征表(task_feature)
+|feature_id|task_id| feature_addr|create_time|last_edit_time|
+|:---|:---|:---|:---|:----|
+
