--- a/Java/redis/二.Redis持久化.md
+++ b/Java/redis/二.Redis持久化.md
@@ -18,8 +18,9 @@
 
 
 ​		 RDB持久化可以**手动**执行，也可以根据服务器配置**定期**执行。RDB持久化所生成的RDB文件是一个经过**压缩**的二进制文件，Redis可以通过这个文件**还原**数据库的数据。
+![](images/2021-04-29-20-42-08.png)
 
-​		![image-20201221192407247](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20201221192407247.png)
+
 
 ​		RDB是保存在硬盘里面的，所以即使Redis服务器进程退出，甚至运行Redis服务器的计算机停机，但只要RDB文件仍然存在，Redis服务器就可以用它来还原数据库状态。
 
@@ -81,8 +82,7 @@ struct saveparam{
 
 * AOF是通过保存Redis服务器所执行的**写命令**来记录数据库的数据的。
 
-![image-20201221195436152](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20201221195436152.png)
-
+![](images/2021-04-29-20-42-31.png)
 比如我们对空白的数据库执行以下写命令：
 
 ```
@@ -100,8 +100,7 @@ redis> RPUSH numbers 128 256 512
 
 ​			如上述过程会产生以下内容的AOF文件：
 
-![image-20201221200029950](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20201221200029950.png)
-
+![](images/2021-04-29-20-44-36.png)
 ​			这些都是以Redis的命令**请求协议格式**保存的，Redis协议规范（RESP）参考资料：
 
 * https://www.cnblogs.com/tommy-huang/p/6051577.html
@@ -125,13 +124,11 @@ redis> RPUSH numbers 128 256 512
   考虑是否将内存缓冲区的数据真正写入到硬盘
 
   
-
-![image-20201221201029185](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20201221201029185.png)
+![](images/2021-04-29-20-44-50.png)
 
 ​			flushAppendOnlyFile函数的行为由服务器配置的**appendfsyn选项**来决定的：
 
-![image-20201221201114301](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20201221201114301.png)
-
+![](images/2021-04-29-20-44-58.png)
 
 
 ### 2.2.2 AOF 文件的载入与数据还原
@@ -141,9 +138,7 @@ redis> RPUSH numbers 128 256 512
 ​				详细步骤如下：
 
 * 创建一个不带网络连接的伪客户端（fake client）来执行本地AOF的命令，直到AOF命令被全部执行完毕。
-
-![image-20201221201722134](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20201221201722134.png)
-
+![](images/2021-04-29-20-45-10.png)
 
 
 ### 2.2.3  AOF 重写
@@ -162,12 +157,11 @@ redis> RPUSH numbers 128 256 512
 
 比如说现在有一个Redis 数据库的数据如下：
 
-![image-20201221203650443](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20201221203650443.png)
+![](images/2021-04-29-20-45-23.png)
 
 新的AOF 命令如下：
 
-![image-20201221203719394](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20201221203719394.png)
-
+![](images/2021-04-29-20-45-30.png)
 
 
 * AOF 后台重写
@@ -183,9 +177,7 @@ redis> RPUSH numbers 128 256 512
 ​			为了解决数据不一致的问题，Redis服务器设置了一个**AOF重写缓冲区**，这个缓存区会在服务器**创建出子进程之后使用**。
 
 ​			
-
-![image-20201221204217420](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\image-20201221204217420.png)
-
+![](images/2021-04-29-20-45-46.png)
 
 
 
