--- a/Java/操作系统/操作系统概述.md
+++ b/Java/操作系统/操作系统概述.md
@@ -20,7 +20,7 @@
 
 ##基本功能
 1. 进程管理
-   * 进程控制，进程同步，进程通信，思索处理，处理机调度等
+   * 进程控制，进程同步，进程通信，死锁处理，处理机调度等
 2. 内存管理
    * 内存分配，地址映射，内存保护与共享，虚拟内存等
 3. 文件管理
