--- a/Java/Java面经/项目/项目设计.md
+++ b/Java/Java面经/项目/项目设计.md
@@ -48,6 +48,12 @@
 |:---|:----|:---|:----|:---|:----|
 
 #### 特征表(task_feature)
-|feature_id|task_id| feature_addr|create_time|last_edit_time|
-|:---|:---|:---|:---|:----|
+|feature_id|task_id| milvus_id| feature_addr|create_time|last_edit_time|
+|:---|:---|:---|:---|:----|:----|
+
+
+
+#### 解表（solution）
+| solution_id| task_id| is_solved|solution_addr|create_time|last_edit_time|
+|:---|:---|:---|:---|:---|:---|
 
