--- a/Java/Spring/4.Spring 生命周期.md
+++ b/Java/Spring/4.Spring 生命周期.md
@@ -4,7 +4,7 @@
 ##生命周期图片描述
 ![图 40](../../images/588898fc4c7fa8b50d8e768d97841b7b4f10d640de13278dc0008c56a11a23ab.png)  
 
-
+![](images/2021-06-23-20-14-06.png)
 ##实例演示
 1.定义一个Person类,实现了DisposableBean, InitializingBean, BeanFactoryAware, BeanNameAware这4个接口，同时还有自定义的init-method和destroy-method。这里，如果不了解这几个接口的读者，可以先去看看这几个接口的定义。
 ```java
