--- a/Java/Java面经/多线程专题/线程池.md
+++ b/Java/Java面经/多线程专题/线程池.md
@@ -39,7 +39,7 @@ JVM 在 HotSpot 的线程模型下，JAVA 线程会一对一映射为**内核线
 定时线程池。指定核心线程数量， 普通线程数量**无限**，线程执行完任务立即回收，任务队列为延时阻塞队列。这是一个比较特别的线程，使用与执行定时或周期性的任务
 
 #### CachedThreadPool
-缓存线程池，没有核心线程，普通线程为Integer.MAX_VALUE()，线程闲置60s，任务使用SynchronousQueue这种无容量的同步u队列，适用于任务量大但耗时低的场景。
+缓存线程池，没有核心线程，普通线程为Integer.MAX_VALUE()，线程闲置60s，任务使用SynchronousQueue这种无容量的同步队列，适用于任务量大但耗时低的场景。
 
 ## ThreadPoolExecutor 
 ThreadPoolExecutor在构造的时候有几个重要的参数，分别是：
