--- a/Java/redis核心技术与实战/基础篇.md
+++ b/Java/redis核心技术与实战/基础篇.md
@@ -454,7 +454,7 @@ sentinel monitor <master-name> <ip> <redis-port> <quorum>
 ![](images/2021-07-02-19-20-03.png)
 
 
-### 哨兵是如何直到从库的IP地址和端口？
+### 哨兵是如何知道从库的IP地址和端口？
 
 这是由哨兵向主库发送INFO命令来完成的。就像下图所示，哨兵2给主库发送INFO命令，主库接收到命令后返回从库列表。
 ![](images/2021-07-02-19-20-31.png)
