--- a/Java/redis核心技术与实战/实践篇.md
+++ b/Java/redis核心技术与实战/实践篇.md
@@ -743,3 +743,779 @@ else
 
 ## 24 替换策略：缓存满了怎么办？
 
+Redis 缓存使用内存来保存数据，避免业务应用从后端数据库中读取数据，可以提升应用的响应速度。那么，如果我们要把所有要访问的数据都放入缓存，是不是一个很好的设计选择呢？
+这样做的性价比反而不高。  举个例子，MySQL中有1TB的数据，如果使用Redis把这1TB的数据都缓存起来，虽然应用都能在内存中访问数据了，但是，这样配置并不合理，因为性价比很低。
+
+一方面，1TB的内存的价格大约是3.5万元，而1TB磁盘的价格大约是1000元。另一方面，数据库的访问都是由局限性的，也就是通常所说的“八二原理”，80%的请求实际只访问了20%的数据。
+
+为了保证较高的性价比，缓存的空间容量必然要小于后端数据库的数据总量。不过，随着要缓存的数据量越来越大，有限的缓存空间不可避免地会被写满。
+
+为了解决这个问题， 涉及到了缓存系统的重要机制，即**缓存数据的淘汰机制**。
+
+
+### 设置多大的缓存容量合适？
+缓存容量设置得是否合理，会直接影响到使用缓存的性价比。我们通常以最小的代价获得最大的收益，所以，把昂贵的内存资源用在关键地方就非常重要了。
+
+根据“八二原理",80%的访问实际上只访问了20%的数据，然而考虑到种种因素，实际上不一定如此。
+
+需要**结合应用数据实际访问特征和成本开销来综合考虑的。** 建议把缓存容量设置为总数据量的15%-30%，兼顾访问性能和内存空间开销。
+
+
+### Redis 缓存有哪些淘汰策略？
+
+Redis4.0 前一共实现了6种内存淘汰策略，在4.0之后，又增加了2种策略。 可以按照是否会进行数据淘汰把他们分成2类：
+* 不进行数据淘汰的策略，只有noeviction
+* 会进行淘汰的7种其他策略。
+
+会进行淘汰的7种策略，在根据 淘汰候选数据集的范围分为两类：
+* 设置了过期时间的数据中进行淘汰
+* 在所有数据范围内淘汰
+
+![](images/2021-07-12-15-59-15.png)
+
+接下来具体解释下各个策略。
+
+1. noecvtion: 当Redis在使用的内存空间超过maxmemory值时，并不会淘汰数据。对应到缓存，一旦缓存被写满了，再有写请求时，Redis 不再提供服务，而是直接返回错误。 
+2. volatile-ttl：在针对设置了过期时间的键值对，根据过期时间的先后进行删除，越早过期的越先被删除
+3. volatile-random: 在针对设置了过期时间的键值对，随机删除
+4. volatile-lru: 使用lru算法进行筛选设置了过期时间的键值对
+5. volatile-lfu: 使用lfu算法筛选设置了过期时间的键值对
+6. allkeys-random: 从所有键值对中随机选择并删除的键值对中，进行随机删除。
+7. allkeys-lru: 使用lru在所有数据中进行筛选
+8. allkeys-lfu: 使用lfu在所有数据中进行筛选
+
+
+
+
+LRU 会把所有的数据组织成一个链表，链表的头和尾分别表示MRU端和LRU端，分别代表最近最常使用 的数据和最近最不常用的数据。
+![](images/2021-07-12-16-30-49.png)
+![](images/2021-07-12-16-32-22.png)
+
+LRU算法在实际实现时，需要用链表管理所有的缓存数据，这会带来**额外的空间开销**。而且，当有数据被访问时，需要在链表上把该数据移动到MRU端，如果有大量数据被访问，就会带来很多链表移动操作，会很耗时，进而会降低Redis 缓存性能。
+
+所以，Redis中，LRU算法被做了简化，Redis 会默认个数据的最近一次访问的时间戳（由键值对数据结构 RedisObject 中的 lru 字段记录）。然后，Redis 在决定淘汰的数据时，第一次会随机选出 N 个数据，把它们作为一个候选集合。接下来，Redis 会比较这 N 个数据的
+lru 字段，把 lru 字段值最小的数据从缓存中淘汰出去。
+
+
+### tips
+* 优先使用allkeys-lru策略。这样，可以充分利用LRU这一经典缓存算法的优势，把最近最常访问的数据留在缓存中，提升应用的访问性能。 如果业务数据中有明显的冷热数据区分，使用allkeys-lru 策略。
+* 业务应用中的数据访问频率相差不大，没有明显的冷热数据区分，建议使用allkeys-random策略，随机选择淘汰的数据就行。
+* 如果业务中有置顶的需求，比如置顶新闻，置顶视频，那么，可以使用volatile-lru 策略，同时不给这些置顶数据设置过期时间。
+
+
+
+### 如何处理被淘汰的数据？
+一般来说，被淘汰的数据选定后，如果这个数据是干净数据，我们就直接删除；如果这个数据是脏数据，我们需要把它写回数据库，如下图所示:
+![](images/2021-07-12-16-42-31.png)
+
+
+不过，**对于 Redis 来说，**它决定了被淘汰的数据后，会把它们删除。即使淘汰的数据是脏数据，Redis 也不会把它们写回数据库。所以，我们在使用 Redis 缓存时，如果数据被修改了，需要在数据修改时就将它写回数据库。否则，这个脏数据被淘汰时，会被 Redis 删除，而数据库里也没有最新的数据了。
+
+
+##  25 缓存异常（上）：如何解决缓存和数据库的数据不一致问题？
+在实际应用Redis 缓存时，我们经常会遇到一些异常问题，概括来说有4个方面：缓存中的数据和数据库中的不一致;  缓存雪崩；缓存击穿和缓存穿透。
+
+
+
+### 缓存和数据库的数据不一致是如何发生的？
+
+数据一致性 包含了以下两种情况：
+* 缓存中有数据，那么，缓存的数据值需要和数据库的值相同
+* 缓存中本身没有数据，那么数据库的值必须是最新值。
+
+不符合这两种情况的，就属于缓存和数据库的不一致问题了。不过，当缓存的读写模式不同时，缓存数据不一致的发生情况不一样，应对方法也会有所不同，所以，先按照缓存读写模式，来分别了解下不同模式下的缓存不一致情况。
+
+
+对于**读写缓存**来说，如果要对数据库进行增删改，就需要在缓存中进行，同时还要根据采取的写回策略，决定是否同步协会到数据库中。
+
+* **同步直写策略**：写缓存时，也同步写数据库，缓存和数据库中的数据一致；
+* **异步写回策略**：写缓存时不同步写数据库，等到数据从缓存中淘汰时，再写回数据库。使用这种策略时，如果数据还没有写回数据库，缓存就发生了故障，那么，此时，数据库就没有最新的数据了。
+
+
+所以，对于读写缓存来说，要想保证缓存和数据库中的数据一致，就要采用**同步直写策略**。不过，需要注意的是，如果采用这种策略，就需要**同时更新缓存和数据库**。所以，我们要在业务应用中使用事务机制，来保证缓存和数据库的更新具有原子性，也就是说，两者要不一起更新，要不都不更新，返回错误信息，进行重试。否则，我们就无法实现同步直写。
+
+
+而对于**只读缓存**，对于只读缓存来说，如果有数据新增，会直接写入数据库；而有的数据删改时，就需要把只读缓存中的数据标记为无效。这样一来，应用后续再访问这些增删改的数据时，因为缓存中没有响应的数据，就会发生缓存缺失。此时，应用再从数据库中把数据读入缓存，这样后续再访问数据时，就可以直接从缓存中读取了。
+
+
+![](images/2021-07-12-20-35-36.png)
+
+
+上图，可以看到 Tomcat上的应用，无论是新增，修改，还是删除数据X，都会直接再数据库中增改删。当然，如果应用执行的是修改或删除操作，还会删除缓存的数据X。
+
+那么，这个过程会不会出现数据不一致的情况呢？考虑到新增数据和删改数据的情况不一致，所以分开来看。
+
+#### 1.新增数据
+新增数据 数据直接写到数据库中，不用对缓存做任何操作，此时，缓存中本身就没有新增数据，而数据库中是最新值，因此是一致的。
+
+#### 2. 删改数据
+如果发生删改操作，应用既要更新数据库，也要再缓存中删除数据。这两个操作如果无法保证原子性，也就是说，要不都完成，要不都没完成，此时就会发生缓存不一致的情况。
+
+假设应用先删除缓存，再更新数据库，如果缓存删除成功，但是数据库更新失败，那么，应用再访问数据时，缓存中没有数据，就会发生缓存缺失。然后，应用再访问数据库，但是数据库中的值为旧值，应用就访问到旧值了。
+
+
+![](images/2021-07-12-20-49-05.png)
+
+
+如果先更新数据库，再删除缓存中的值，
+
+但是如果应用先完成了数据库的更新，但是，删除缓存失败了，那么数据库中的值是新值，而缓存中的旧值，这肯定是不一致的，这个时候，如果有其他的并发请求来访问数据，按照正常的缓存访问流程，就会现在缓存中查询，但此时，就会读到旧值了。
+![](images/2021-07-12-20-57-01.png)
+
+
+![](images/2021-07-12-20-57-24.png)
+
+
+
+### 如何解决数据不一致的问题？
+
+**重试机制**
+
+可以把要删除的缓存值或者是要更新的数据库暂存到消息队列中。当应用没有能够成功地删除缓存值或者成功地删除缓存值或者是更新数据库值时，可以从消息队列中重新读取这些值，然后再次进行删除和更新。
+
+
+如果能够成功地删除或更新，我们就要把这些值从消息队列中去除，以免重复操作，此时，我们也可以保证数据库和缓存的数据一致了。否则的话，我们还需要再次进行重试。如果重试超过的一定次数，还是没有成功，我们就需要向业务层发送报错信息了。
+![](images/2021-07-12-21-07-03.png)
+
+刚刚说的是在更新数据库和删除缓存值得过程中，一个操作失败的情况，实际上，即使这两个操作第一次执行时都没有失败，当有大量并发请求时，应用还是有可能读到不一致的数据。
+
+接下来，按照不同的删除
+#### 情况一：先删除缓存，在更新数据库。
+假设线程A 删除缓存值后，还没有来得及更新数据库，线程B就开始读取数据了，那么这个时候，线程B就会发现缓存缺失，就只能去数据库读取。这会带来两个问题：
+1. 线程B读到了旧值
+2. 线程B是在缓存缺失的情况下读取的数据库，所以，他还会把旧值写入缓存，这可能会导致其他线程从缓存中读到旧值，
+
+等到线程B从数据库读取完数据，更新了缓存后，线程A才开始更新数据库，此时，缓存中的数据是旧值，而数据库中的是最新值，两者就不一致了。
+
+![](images/2021-07-12-21-21-34.png)
+
+
+这里可以让 线程A 更新完数据库以后，可以让它先sleep一小段时间，在进行一次缓存删除操作。
+
+这里之所以要加上sleep的这段时间后，就是为了让线程B能够先从数据库读取数据，再把缺失的数据写入缓存，然后，线程A在进行删除。 所以，线程A sleep的时间，就需要大于线程B 读取数据再写入缓存的时间。（这个时间 可以在业务运行的时候，统计下线程读数据和写缓存的操作时间，以此为基础来进行评估）
+
+这样一来，其他线程读取数据时，会发生缺失，所以会从数据中读取最新值。因为这个方案会在第一次删除缓存值后，延迟一段时间再次进行删除，所以叫做“**延迟双删**”
+
+
+#### 情况二：先更新数据库值，在删除缓存值。
+
+如果线程A更新了数据库的值，但还没来得及删除缓存值，线程B就开始读取数据了，那么此时，线程B查询缓存时，发生缓存命中，就会直接从缓存中读取旧值。不过，在这种情况下，如果，其他线程并发读缓存的请求不多，就不会有很多请求读取到旧值。而且，线程A一般也会很快删除缓存值，这样一来，其他线程再次读取时，就会发生缓存缺失。进而从数据库中读取最新值。**所以，这种情况对业务的影响较小。**
+
+![](images/2021-07-12-21-39-36.png)
+
+
+### 小结
+缓存不一致主要由两个原因导致的：
+* 删除缓存和更新数据库失败而导致数据不一致，可以使用重试机制确保删除或更新操作成功
+* 在删除缓存值，更新数据库的这两步操作中，有其他线程的并发度操作，导致其他线程读取到旧值，应对方案是延迟双删。
+  
+对于**读写缓存**来说，采用同步写回的策略，可以保证缓存和数据库的数据一致。
+
+而对于**只读缓存**来说，有以下方法。
+![](images/2021-07-12-21-47-43.png)
+
+对于上述方法来说，优先使用 先更新数据库，在删除缓存的方法，原因主要由两个：
+
+
+ 1. 先删除缓存值再更新数据库，有可能导致请求因缓存缺失而访问数据库，给数据库带来压力。
+ 2. 如果业务应用读取数据库和写缓存的时间不好估算，延迟双删中的等待时间就不好设置。
+
+如果业务层要求必须读取一致的消息，则再更新数据库的时候，在Redis缓存客户端暂停读请求，等到数据库删完，缓存值删除后，在读取数据，从而保证数据一致性。
+
+
+
+## 26 缓存异常（下）：如何解决缓存雪崩，击穿，穿透难题？
+
+缓存除了数据不一致问题，常常还会面临缓存异常的三个问题，分别是**缓存雪崩，缓存击穿，缓存穿透。** 这三个问题一旦发生，会导致大量的请求积压到数据库层。如果请求的并发量很大，就会导致数据库宕机或是故障。
+
+
+
+### 缓存雪崩
+是指大量的请求无法在Redis 缓存中进行处理，紧接着，应用将大量请求发送到数据库层，导致数据库层的压力激增。
+
+缓存雪崩一般是由两个原因导致的，应对方案也有所不同，
+
+####第一个原因是：**缓存中有大量数据同时过期，导致大量请求无法得到处理。**
+
+![](images/2021-07-12-22-03-50.png)
+
+对于上面这个原因：提供两种解决方案：
+
+1） **避免给大量的数据设置大量的过期时间，**
+通过expire 命令给每个数据设置过期时间，给这些数据的过期时间增加一个较小的随机数（例如随机增加1-3分钟）
+
+2）**服务降级**
+所谓的服务降级，是指发生缓存雪崩时，针对不同的数据采取不同的处理方式。
+* 当业务应用访问的是 **非核心数据**（例如电商商品属性）时，暂时停止从缓存中查询这些数据，而是直接返回预定义信息，空值或是错误信息
+* 当业务应用访问的是**核心数据**时，仍然允许查询缓存，如果缓存缺失，也可以继续通过数据库读取。
+![](images/2021-07-12-22-10-49.png)
+
+#### 第二个原因， Redis 缓存实例发生故障宕机了，无法处理请求
+
+第一个建议，**是在业务系统中实现服务熔断或请求限流机制。**
+
+所谓的服务熔断，是指在发生缓存雪崩时，为了防止引发连锁的数据库雪崩，甚至是整个系统的崩溃，我们暂停业务应用对缓存系统的接口访问。再具体点说，就是业务应用调用缓存接口时，缓存客户端并不把请求发给Redis 缓存实例，而是直接返回，等到 Redis 缓存实例重新恢复服务后，再允许应用请求发送到缓存系统。
+
+![](images/2021-07-12-22-14-18.png)
+
+
+ **请求限流**
+假设业务系统正常运行时，请求入口前端允许每秒进入系统的请求是 1 万个，其中，9000 个请求都能在缓存系统中进行处理，只有 1000 个请求会被应用发送到数据库进行处理。
+一旦发生了缓存雪崩，数据库的每秒请求数突然增加到每秒 1 万个，此时，我们就可以启动请求限流机制，在请求入口前端只允许每秒进入系统的请求数为 1000 个，再多的请求就会在入口前端被直接拒绝服务。所以，使用了请求限流，就可以避免大量并发请求压力传递到数据库层
+![](images/2021-07-12-22-15-24.png)
+
+
+第二个建议，事前预防
+通过主从节点的方式构建 Redis 缓存高可靠集群。如果 Redis 缓存的主节点故障宕机了，从节点还可以切换成为主节点，继续提供缓存服务，避免了由于缓存实例宕机而导致的缓存雪崩问题。缓存雪崩是发生在大量数据同时失效的场景下，而接下来我要向你介绍的缓存击穿，是发生在某个热点数据失效的场景下。和缓存雪崩相比，缓存击穿失效的数据数量要小很多，应对方法也不一样，我们来看下。
+
+
+### 缓存击穿
+缓存击穿是指，针对某个访问非常频繁的热点数据的请求，无法在缓存中进行处理，紧接着，访问该数据的大量请求，一下子都发送到了后端数据库，导致了数据库压力激增，会影响数据库处理其他请求。缓存击穿的情况，经常发生在热点数据过期失效时，如下图所示：
+![](images/2021-07-12-22-17-34.png)
+
+
+**对于访问特别频繁的热点数据，我们就不设置过期时间了。**
+
+
+### 缓存穿透
+是指数据既不在redis 也不在  数据库中，导致请求在访问缓存时，发生缓存缺失，再去访问数据库时，也没有。
+![](images/2021-07-12-22-20-45.png)
+
+
+为了避免缓存击穿的影响，提供三种应对方案。
+
+**第一种方案是，缓存控制或缺省值。**
+
+一旦发生缓存穿透，我们就可以针对查询的数据，在 Redis 中缓存一个空值或是和业务层协商确定的缺省值（例如，库存的缺省值可以设为 0）。紧接着，应用发送的后续请求再进行查询时，就可以直接从 Redis 中读取空值或缺省值，返回给业务应用了，避免了把大量请求发送给数据库处理，保持了数据库的正常运行。
+
+
+第二种方案是：**使用布隆过滤器快速判断数据是否存在，避免从数据库中查询数据是否存在，减轻数据库压力。**
+
+布隆过滤器由一个初值都为 0 的 bit 数组和 N 个哈希函数组成，可以用来快速判断某个数据是否存在。当我们想标记某个数据存在时（例如，数据已被写入数据库），布隆过滤器会通过三个操作完成标记：
+![](images/2021-07-12-22-25-02.png)
+
+
+第三种方案： 在请求**入口的前端进行请求检测。**
+
+缓存穿透的一个原因是有大量的恶意请求访问不存在的数据，所以，一个有效的应对方案是在请求入口前端，对业务系统接收到的请求进行合法性检测，把恶意的请求（例如请求参数不合理、请求参数是非法值、请求字段不存在）直接过滤掉，不让它们访问后端缓存和数据
+库。这样一来，也就不会出现缓存穿透问题了。
+
+![](images/2021-07-12-22-27-03.png)
+
+
+## 27 缓存被污染了，该怎么办？
+**什么是缓存污染**：
+
+在一些场景下，有些数据被访问的次数非常少，甚至只会被访问一次。当这些数据服务完访问请求后，如果还继续留存在缓存中的话，就只会白白占用缓存空间，这种情况，就是缓存污染。
+
+当缓存污染不严重时，只有少量数据占据缓存空间，此时，对缓存系统的影响不大。但是，缓存污染一旦变得严重后，就会有大量不再访问的数据滞留在缓存中。如果这时数据占满了缓存空间，我们再往缓存中写入新数据时，就需要先把这些数据逐步淘汰出缓存，这就会引入额外的操作时间开销，进而会影响应用的性能。
+
+
+
+### 如何解决缓存污染问题？
+
+使用数据淘汰策略：
+noeviction---不淘汰，因此没法解决
+volatile-random---随机淘汰---肯定不能
+volatile-ttl---针对过期时间找到时间最短的淘汰---不一定（除非你知道数据再什么时候被访问）
+volatile-lru----
+volatile-lfu
+allkeys-lru----
+allkeys-random----随机访问，肯定不行
+allkeys-lfu----
+
+接下来针对剩下的几种策略进行分析
+
+
+### LRU 缓存策略
+lru策略的核心思想：如果一个数据刚刚被访问，那么这个数据肯定是热数据，还会被再次访问。
+
+Redis的LRU策略，会在每个数据对应的RedisObject 结构体设置一个lru字段，用来记录数据的访问时间戳。再进行数据淘汰时，LRU策略会在候选数据集中中淘汰掉lru字段最小的数据。
+
+
+所以，在数据被频繁访问的时候，LRU策略可以有效留存访问时间最近的数据。而且，因为留存的这些数据还会被再次访问，所以又可以提升业务应用的访问速度。
+
+
+
+### LFU 缓存策略
+
+LFU缓存策略是在LRU基础策略上，为每个数据增加了一个计数器，来统计这个数据的访问次数。当使用LFU策略筛选淘汰数据时，首先会根据数据的访问次数进行筛选，把访问次数最低的数据淘汰出缓存。如果两个次数的访问次数相同，LFU策略再比较这两个数据的访问时效性，把距离上一次访问时间更久的数据淘汰出缓存。
+
+为了避免操作链表的开销，Redis 在实现LRU策略使用了两个近似方法：
+* Redis 使用RedisObject 结构来保存数据的，RedisObject 结构中设置了一个lru字段，用来记录数据的访问时间戳；
+* Redis 并没有为所有的数据维护了一个全局的链表，而是通过随机采样方式，选取一定数量的数据（例如10个）的数据放入候选集合，后续在候选集合中根据lru字段值的大小进行筛选。
+
+
+**在此基础上，Redis 在实现 LFU 策略的时候，只是把原来的24bit 的lru字段，又进一步拆分成了两部分。**
+
+* 1.ldt值： lru字段的前16bit，表示数据的访问时间戳
+* 2.counter值： lru字段的后8bit，表示数据的访问次数。
+
+在实际应用中，一个数据可能会被访问成千上万次，如果访问一次加1，那么只要访问次数超过了255，数据的counter值就一样了。在进行数据淘汰时，LFU策略就无法很好地区分并筛选这些数据，反而还是可能把不怎么访问的数据留存在了缓存里。
+
+
+因此，Redis **在实现LFU策略时，Redis 并没有采用数据每被访问一次，就给对应的counter值加1 的计数规则，而是采用了一个更优化的技术规则。**，即：
+* 每当数据被访问一次时，首先，用计数器当前的值乘以配置项 lfu_log_factor 再加1，再取其倒数，得到一个p值；然后，把这个p值和一个取值范围在(0,1)间的随机数r值比大小，只有p值大于r值时，计数器才加1.
+
+
+redis的部分源码如下：
+
+```c
+double r = (double)rand()/RAND_MAX;
+...
+double p = 1.0/(baseval*server.lfu_log_factor+1);
+if (r < p) counter++;
+```
+
+![](images/2021-07-18-14-07-42.png)
+
+
+
+### tips
+缓存污染问题指的是 留存在缓存中的数据，实际不会被再次访问了，但是又占据了缓存空间，如果这样的数据体量很大，甚至占满了内存，每次有新数据写入缓存时，还需要把这些数据逐步淘汰出缓存，就会增加缓存操作的时间开销。
+
+因此，采用LFU来解决缓存污染问题。
+
+如果业务应用中有短时高频访问的数据，除了LFU策略本身会对数据的访问次数进行自动衰减以外：可以优先使用volatile-lfu策略，，并根据这些数据的访问时限设置它们的过期时间，以免它们留存在缓存中造成污染。
+
+
+## 28 Pika: 如何基于SSD实现大容量Redis？
+
+
+
+## 29 无锁的原子操作：Redis 如何应对并发访问？
+在使用Redis 时，不可避免地会遇到并发访问地问题，比如说如果多个用户同时下单，就会对缓存在Redis 中的商品库存并发更新。一旦有了并发写操作，数据就会被修改，如果我没有对并发写做好控制，就可能导致数据被改错，影响到业务的正常使用(例如库存数据错误，导致下单异常)。为了保证并发访问的正确性，Redis 提供了两种方法，分别是**加锁和原子操作**。
+
+
+**加锁**是一种常用的方法，在读取数据前，客户端需要先获得锁，否则就无法进行操作。当一个客户端获得锁后，就会一直持有这把锁，知道客户端完成数据更新，才释放这把锁。
+
+
+这里存在两个问题: 一个是，**如果加锁操作多，会降低系统的并发访问性能**；
+第二个是：Redis客户端要加锁时，**需要用到分布式锁，而分布式锁实现复杂，需要用额外的存储系统来提供加解锁操作**。
+
+
+原子操作是另一种提供并发访问控制的方法。 原子操作是指执行过程保持原子性的操作，而且原子操作执行时并不需要加锁，实现了无锁操作，这样一来，既能保证并发控制，还能减少对系统并发性能的影响。
+
+
+
+### 并发访问中需要对什么进行控制？
+
+并发访问控制，是指多个客户端访问操作同一份数据的过程进行控制，以保证任何客户端发送的操作在Redis 实例上执行时具有互斥性。 例如，客户端A 的访问操作在执行时，客户端B的操作不能执行，需要等到A的操作结束后，才能执行。
+
+并发访问控制对应的操作主要是数据修改操作。当客户端需要修改数据时，基本流程分为两步：
+* 1. 客户端先把数据读取到本地，在本地进行修改
+* 2. 客户端修改完数据后，再写回Redis。
+
+我们把这个流程叫做“**读取-修改-写回**”操作（Read-Modify-Write，简称位RMW操作）。当有多个客户端对同一份数据执行RMW操作的话，我们就需要让RMW操作涉及的代码以原子性方式执行。访问同一份数据的RMW操作代码，叫做**临界区**代码。
+
+不过，当有多个客户端并发执行临界区代码时，就会存在一些潜在问题，接下来，用一个多客户端更新商品库存的例子来解释一下。
+
+临界区代码如下：为对商品库存执行扣减1的操作，伪代码如下所示：
+
+```c
+current = GET(id)
+current--
+SET(id, current)
+```
+
+客户端首先会根据商品id，从Redis中读取商品的当前库存值current ，然后，客户端对库存值减1，再把库存值写回Redis。 当有多个客户端执行这段代码时，这就是一份临界区代码。
+
+
+如果对临界区代码的执行没有控制，就会出现数据更新错误，在刚才的例子中，假设现在有两个客户端A和B，同时执行上面的临界区代码，就会出现错误。
+
+![](images/2021-07-18-15-13-27.png)
+
+出现上述这个现象的原因时，临界区代码中的客户端读取数据，更新数据，再写回数据涉及了三个操作，而这三个操作在执行时并不具有互斥性，多个客户端基于相同的初始值进行修改，而不是基于前一个客户端修改后的值在修改。
+
+#### 加锁
+为了保证数据并发修改的正确性，可以用锁把并行操作变成串行操作，串行操作就具有互斥性。一个客户端持有锁后，其他客户端只能等到锁释放，才能拿锁再进行修改。
+
+```c
+LOCK()
+current = GET(id)
+current--
+SET(id, current)
+UNLOCK()
+```
+
+虽然加锁保证了互斥性，但是**加锁也会导致系统并发性能降低**。
+
+![](images/2021-07-18-15-27-13.png)
+
+
+#### 原子操作
+
+Redis 的两种原子操作方法：
+1. 把多个操作在Redis 实现成 一个操作，也就是单命令操作；
+2. 把多个操作写到一个Lua脚本中， 以原子性方式执行单个Lua脚本。
+
+
+Redis 本身的单命令操作。
+
+Redis 是使用单线程来串行处理客户端的请求操作命令的，所以，当Redis执行某个命令操作时，其他命令时无法执行的，这相当于命令操作是 互斥执行的。当然，Redis 的快照生成，AOF重写这些操作，可以使用后台线程或者是子进程执行，也就是和主线程的操作并行执行。不过，这些操作只是读取数据，不会修改数据，所以，不需要对他们进行做并发控制。
+
+
+尽管，Redis 的单个命令操作可以原子性地执行，但是在实际应用中，数据修改可能包含多个操作，至少包括**读数据，数据增减，写回数据**三个操作，这显然就不是单个命令操作了，那该怎么办？
+
+##### 单独地加减命令
+在这里 Redis  提供了**INCR/DECR** 命令，将三个操作转变为一个原子操作了。 INCR/DECR 命令可以对数据进行增值/减少操作，而且它们本身就是单个命令操作，Redis 执行它们时，本身具有互斥性。
+
+比如说，在刚才地库存扣减例子中，客户端可以使用下面地代码，直接完成对商品id地库存值减1.
+```c
+DECR id 
+```
+
+
+
+#### 复杂命令
+如果要执行的操作不是简单地增减数据，而是有更加复杂地判断逻辑或者是其他操作，那么，Redis 的单命令已经无法保证多个操作地互斥执行了。这个时候，就需要使用Lua 脚本。
+
+
+Redis 会把整个Lua脚本作为一个整体执行，在执行的过程中不会被其他命令打断，从而保证了Lua脚本中操作的原子性，如果 有多个操作要执行，但是又无法用INCR/DECR 这种命令操作来实现，就可以把这些要执行的操作编写到一个lua脚本中。然后，可以使用Redis 的 EVAL命令来执行脚本。这样一来。这些操作在执行时具有了互斥性。
+
+```c
+//获取ip对应的访问次数
+current = GET(ip)
+//如果超过访问次数超过20次，则报错
+IF current != NULL AND current > 20 THEN
+ ERROR "exceed 20 accesses per second"
+ELSE
+ //如果访问次数不足20次，增加一次访问计数
+ value = INCR(ip)
+ //如果是第一次访问，将键值对的过期时间设置为60s后
+ IF value == 1 THEN
+ EXPIRE(ip,60)
+ END
+ //执行其他操作
+ DO THINGS
+END
+```
+
+![](images/2021-07-18-16-00-48.png)
+
+
+```c
+local current
+current = redis.call("incr",KEYS[1])
+if tonumber(current) == 1 then
+ redis.call("expire",KEYS[1],60)
+end
+```
+![](images/2021-07-18-16-02-15.png)
+
+```c
+redis-cli --eval lua.script keys , args
+```
+
+
+
+
+## 如何用Redis 实现分布式锁
+
+在应对并发问题时，除了原子操作，Redis 客户端还可以通过加锁的方式，来控制并发写操作对共享数据的修改，从而保证数据的正确性。
+
+但是，Redis 属于分布式系统，当有**多个客户端要争抢锁的时候**，必须要保证，**这把锁不能是某个客户端本地的锁**。否则的话，其他客户端时无法访问这把锁的当然也就不能获取这把锁了。
+
+
+所以，在分布式系统中，当有多个客户端需要获取锁时，我们需要分布式锁，此时，锁是保存在一个共享存储系统中的，可以被多个客户端共享访问和获取。
+
+
+Redis 本身可以被多个客户端共享访问，正好就是一个共享存储系统，可以用来保存分布式锁。而且，Redis的读写性能高，可以应对高并发的锁操作场景。 
+
+
+
+### 单机上的锁和分布式锁的联系与区别
+
+可以先看单机上的锁，
+对于在单机上的多线程程序来说，锁本身可以用一个变量表示。
+
+* 变量为0，表示没有线程没有获得锁
+* 变量为1，表示已有线程获得锁了。
+
+然而在分布式场景下， **锁变量需要由一个共享系统来维护**，只有这样，多个客户端才可以通过访问共享存储系统来访问锁变量。**相应的，加锁和释放锁的操作就变成了读取，判断和设置共享存储系统中的锁变量值。**
+
+
+
+这样一来，我们就可以得出实现分布式锁的两个要求。
+* 要求一：分布式锁的加锁和释放锁的过程，涉及多个操作。所以，在实现分布式锁时，我们需要保证**这些锁操作的原子性；**
+* 要求二：共享存储系统保存了锁变量，如果共享存储系统发生故障或宕机，那么客户端也就无法进行锁操作了。在实现分布式锁时，我们需要考虑保证共享存储系统的可靠性，进而**保证锁的可靠性。**
+
+
+
+### 基于单个Redis 节点实现分布式锁
+作为分布式锁实现过程中的共享存储系统，Redis 可以使用键值对来保存锁变量，再接收和处理不同客户端发送的加锁和释放锁的操作请求。那么，键值对的键和值具体是怎么定的呢？
+
+我们要赋予锁变量一个变量名，把这个变量名作为键值对的键，而锁变量的值，则是键值对的值，这样一来，Redis 就能保存锁变量了，客户端也就可以通过Redis的命令操作来实现锁操作。
+
+![](images/2021-07-18-17-36-24.png)
+
+
+可以看到，Redis 可以使用一个键值对对lock_key:0来保存锁变量，其中，键是lock_key，也就是锁变量的初始值是0.
+
+
+再来分析下加锁操作。
+
+在图中，客户端A和C同时请求加锁。因为Redis 使用单线程处理请求，所以，即使客户端A和C同时把加锁请求发给了Redis，Redis也会串行处理它们的请求。
+
+
+假设Redis先处理客户端A的请求，读取lock_key 的值，发现 lock_key 为0，所以，Redis 就把lock_key 的value置为1，表示已经**加锁**了。紧接着，Redis 处理客户端C的请求，此时，Redis 会发现lock_key 的值已经为1；所以就返回**加锁失败**的信息。
+
+
+而释放锁就是将锁变量设置为0。
+
+![](images/2021-07-18-17-45-05.png)
+
+
+因为加锁包含了三个操作（读取锁变量，判断锁变量值以及把锁变量设置为1）而这三个操作在执行时需要保证原子性。那怎么保证原子性呢？
+
+
+根据上一章节的方法，分别是使用Redis 的单命令操作和使用lua脚本。
+
+可以先看下，Redis 可以用哪些单命令操作实现加锁操作。
+
+首先是SETNX 命令， 用于设置键值对的值，具体来说，就是**这个命令在执行时会判断键值对是否存在，如果不存在，就设置键值对的值，如果存在，就不做任何设置。**（预测一波，最后解锁就是删除）
+
+举个例子，如果执行下面的命令时，key不存在，那么key会被创建，并且值会被设置为null；如果key已经存在，SETNX不做任何复制操作
+```c
+SETNX key value
+```
+
+对于释放锁操作来说，我们可以在执行完业务逻辑后，使用DEL命令删除锁变量。不过，你不用担心锁变量被删除后，其他客户端无法请求加锁了。因为SETNX命令在执行时，如果要设置的键值对不存在，SETNX命令会先创建键值对，然后设置它的值。所以，释放锁之后，再有客户端请求加锁时，SETNX命令会先创建保存锁变量的键值对，并设置锁变量的值，完成加锁。
+
+
+因此，可以用**SETNX 和 DEL**，命令组合来实现加锁和释放锁操作。下面的伪代码示例显示了锁操作的过程，你可以看下。
+```c
+// 加锁
+SETNX lock_key 1
+// 业务逻辑
+DO THINGS
+// 释放锁
+DEL lock_key
+```
+
+不过，使用这两个命令  **SETNX 和 DEL** 组合，**存在两个潜在的风险**。
+
+**第一个风险**：假设某个客户端在执行SETNX命令，加锁之后，紧接着却在操作共享数据的时候出现了异常，结果没有一直没有 执行 最后的DEL 命令释放锁。因此，锁就一直被这个客户端持有，其他客户端无法拿到锁，也无法访问共享数据和执行后续操作，这会给业务应用带来影响。
+
+可以给 锁变量设置一个 **过期时间**。
+
+
+第二个风险：客户端A执行了SETNX 命令，客户端B执行 DEL命令释放锁，此时，客户端A的锁就被**误释放**了。 如果客户端C正好也在申请锁，就可以成功获得锁，进而操作共享数据。
+
+为了应对这个问题，需要 **区分来自不同客户端的锁操作**：
+
+在使用SETNX命令加锁的方法中，通过把锁变量值设置为1或0，表示是否加锁成功。1 和 0 只有两种状态，无法表示究竟是哪个客户端进行的锁操作。所以，在加锁操作时，可以让每个客户端给锁变量设置一个唯一值，这里的唯一值就可以用来标识 当前操作的客户端，在释放锁操作时，客户端需要判断，当前锁变量的值是否**和自己的唯一标识相等**，只有在相等的情况下，才能释放锁。这样一来，就不会出现误释放锁的问题。
+
+
+那么，具体的代码如下：
+
+```c
+// 加锁, unique_value作为客户端唯一性的标识
+SET lock_key unique_value NX PX 10000
+```
+其中，unique_value 是客户端的唯一标识，可以用一个随机生成的字符串来表示，PX 10000 则表示 lock_key会在 10s 后过期，以免客户端在这期间发生异常而无法释放锁。
+
+
+
+释放锁，
+```c
+//释放锁 比较unique_value是否相等，避免误释放
+if redis.call("get",KEYS[1]) == ARGV[1] then
+ return redis.call("del",KEYS[1])
+else
+ return 0
+end
+
+// 使用lua脚本，因为删除锁的操作包含了读取锁，判断值，以及删除等多个操作
+redis-cli --eval unlock.script lock_key , unique_value 
+```
+
+
+### 基于多个Redis 节点的高可靠的分布式锁
+为了避免Redis 示例故障而导致锁无法工作的问题，Redis 的开发者Antirez提供了 **分布式锁算法 Redlock**
+
+Redlock 算法的基本思路： 让客户端和多个独立的Redis 示例依次请求锁，如果客户端能够和半数以上的示例完成加锁操作，那么就认为，客户端成功地获得分布式锁了，否则加锁失败。
+
+![](images/2021-07-18-18-46-08.png)
+
+
+
+## 事务机制：Redis 能实现ACID属性嘛？
+事务是数据库的一个重要功能。所谓的事务，就是对数据进行读写的一系列操作。事务在执行时，会提供专门的属性保证，保证**原子性(Atomicity)，一致性(Consistency),隔离性(Isolation)和持久性(Durability)**,也就是ACID属性。这些属性既包括了对事务执行结果的要求，也有对数据库在事务执行前后的数据状态变化的要求。
+
+
+### 事务ACID属性的要求
+
+原子性：假设用户在一个订单中购买了两个商品A和B，那么，数据库就需要把这两个商品的库存都进行扣减。如果只扣减了一个商品的库存，那么，这个订单完成后，另一个商品的库存肯定就错了。
+
+第二个属性是一致性。 数据库中的数据在事务执行前后是一致的。
+
+隔离性：数据库在执行一个事务时，其他操作无法存取到正在执行事务访问的数据。
+
+
+持久性：数据库执行事务后，数据的修改要被持久化保存下来。
+
+
+
+### Redis 如何实现事务？
+Redis 提供了 MULTI,EXEC 两个命令来完成这三个步骤。
+
+第一个，客户端要使用一个命令显式地表示一个事务地开启。在Redis中，这个命令就是MULTI，EXEC这两个命令来完成这三个步骤，来分析下：
+
+第一步，客户端要使用一个命令显式地表示一个事务的开启。在Redis，这个命令就是MULTI。
+
+第二步，客户端把事务中本身要执行的具体操作发送给服务器端。这些操作就是Redis本身提供的数据读写命令，例如GET,SET等。不过，这些命令虽然被客户端发送到了服务器端，但Redis 实例只能把这些命令暂存到一个命令队列中，并不会立即执行。
+
+第三步，客户端向服务器端发送提交事务的命令，让数据库实际执行第二步中发送的具体操作。
+Redis 提供的EXEC 命令就是执行事务提交的。当服务器端收到EXEC命令后，才会实际执行命令队列中的所有命令。
+
+![](images/2021-07-20-09-59-36.png)
+
+
+
+
+### Redis 的事务机制能保证哪些属性？
+
+原子性：
+
+Redis **中并没有提供回滚机制**。虽然**Redis 提供了DISCARD命令，但是，这个命令只能用来主动放弃事务执行，把暂存的命令队列清空，起不到回滚的作用。**
+
+![](images/2021-07-20-10-10-41.png)
+
+
+一致性：
+![](images/2021-07-20-10-11-34.png)
+
+
+隔离性：
+事务的隔离性保证，会受到和事务一起执行的并发操作的影响。而事务执行又可以分为命令入队(EXEC命令执行前)和命令实际执行（EXEC命令执行后）两个阶段，所以，就针对这两个阶段，分成两种情况来分析：
+
+1.**并发操作在EXEC命令前执行**，此时，隔离性的保证要使用WATCH机制来实现，否则隔离性无法保证；
+2. **并发操作在EXEC命令后执行**，此时，隔离性可以保证。
+
+![](images/2021-07-20-10-16-37.png)
+
+
+![](images/2021-07-20-10-17-18.png)
+
+
+上述为并发操作在**EXEC**命令前执行，第二种情况：并发操作在EXEC命令之后被服务器端接收并执行
+![](images/2021-07-20-10-18-20.png)
+
+
+持久性： Redis 是内存数据库，所以数据是否持久化保存完全取决于Redis的持久化配置模式。
+
+如果Redis没有使用RDB或AOF，那么事务的持久化属性肯定得不到保证，如果Redis使用了RDB模式，那么，在一个事务执行后，而下一次的RDB快照还未执行前，如果发生了实例宕机，也是不能保证持久化的。
+
+如果 Redis 采用了 AOF 模式，因为 AOF 模式的三种配置选项 no、everysec 和 always 都会存在数据丢失的情况，所以，事务的持久性属性也还是得不到保证。
+
+
+
+## 32 Redis 主从同步与故障切换
+
+
+### 主从数据不一致
+
+
+## 33 脑裂：一次奇怪的数据丢失
+
+## 34  总结
+
+## 35  Codis VS Redis Cluster：我该选择哪一个集群方案？
+
+ 
+
+## 36 Redis 支撑秒杀场景的关键技术和实践都有哪些？
+
+秒杀场景的业务特点是**限时限量**，业务系统要处理瞬时的大量高并发请求，而Redis就经常被用来支撑秒杀活动。
+
+### 秒杀场景的负载特征对支撑系统的要求
+
+* 特征一：瞬时并发访问量特别高
+第一个特征是瞬时并发访问量非常高。一般数据库每秒只能支撑千级别的并发请求，而Redis的并发处理能力能达到万级别，甚至更高。所以，当有大量并发请求涌入秒杀系统时，我们就需要使用Redis 先拦截大部分请求，避免大量请求直接发送给数据库，把数据库压垮。
+
+* 特征二：读多写少，读操作是简单的查询操作
+在秒杀场景下，用户需要先查验商品是否还有库存（也就是根据商品 ID 查询该商品的库存还有多少），只有库存有余量时，秒杀系统才能进行库存扣减和下单操作。
+
+库存查验操作是典型的键值对查询，而Redis对键值对查询的高效支持，正好和这个操作的要求相匹配。
+
+不过，秒杀活动中只有少部分用户能成功下单，所以，商品库存查询操作(读操作)要远多于库存扣减和下单操作（写操作）。
+
+### Redis 可以在秒杀场景的哪些环节发挥作用？
+一般把秒杀活动分为三个阶段，在每一个阶段，Redis所发挥的作用也不一样。
+
+第一阶段**秒杀活动前**
+在这个阶段，用户会不断刷新商品详情页，这会导致详情页的瞬时请求量剧增。这个阶段的应对方案，一般是尽量**把商品详情页的页面元素静态化，然后使用 CDN 或是浏览器把这些静态化的元素缓存起来。**这样一来，秒杀前的大量请求可以直接由 CDN 或是浏览器缓存服务，不会到达服务器端了，这就减轻了服务器端的压力。在这个阶段，有 CDN 和浏览器缓存服务请求就足够了，我们还不需要使用 Redis。
+
+第二阶段**秒杀活动开始**。
+大量用户点击商品详情页上的秒杀按钮，会产生大量的并发请求查询库存。一旦某个请求查询到有库存，紧接着系统就会进行库存扣减。然后，系统会生成实际订单，并进行后续处理，例如订单支付和物流服务。如果请求查不到库存，就会返回。用户通常会继续点击秒杀按钮，继续查询库存。
+
+
+这个阶段的操作就是三个：**库存查验，库存扣减和订单处理**。每个秒杀请求都会查询库存，而请求只有查到有库存余量后，后续的库存扣减和订单处理才会被执行。所以，这个阶段的最大并发压力都在**库存查验**上。
+
+
+为了支撑大量高并发的库存查验请求，我们需要在这个环节使用 Redis 保存库存量，这样一来，请求可以直接从 Redis 中读取库存并进行查验。那么，库存扣减和订单处理是否都可以交给后端的数据库来执行呢?
+
+其实，订单处理可以在数据库中执行，但库存扣减操作，不能交给后端数据库处理。
+如果把库存扣减放到数据库进行，会带来两个问题：
+* 1. 额外的开销。Redis中保存了库存量，而库存量的最新值又是数据库在维护，所以数据库更新后，还需要和Redis进行同步，这个过程增加了额外的操作逻辑，也带来了额外的开销。
+
+* 2. **下单量超过实际库存量，出现超售。** 由于数据库的处理速度较慢，不能及时更新库存余量，这就导致大量库存查验的请求读取到旧的库存值，并进行下单。此时，就会出现下单数量大于实际的库存量，导致出现超售，这就不符合业务层的要求了。
+
+所以，我们就需要直接在 Redis 中进行库存扣减。具体的操作是，当库存查验完成后，一旦库存有余量，我们就立即在 Redis 中扣减库存。而且，为了避免请求查询到旧的库存值，**库存查验和库存扣减这两个操作需要保证原子性。**
+
+第三个阶段就是**秒杀活动结束后**。这部分用于请求量已经下降很多了，服务器端一般都能支撑，就不重点讨论了。
+
+
+![](images/2021-07-20-11-07-27.png)
+###**Redis 的哪些方法可以支撑秒杀场景？**
+
+秒杀场景对Redis 操作的根本要求有两个：
+1. 支持高并发。
+2. 保证库存查验和库存扣减 原子性执行。针对这条要求，我们就可以使用**Redis 的原子操作**或是**分布式锁**这两个功能特性来支撑了。
+
+
+#### 基于原子操作支撑秒杀场景
+![](images/2021-07-20-11-13-08.png)
+![](images/2021-07-20-11-14-06.png)
+#### 基于分布式锁来支撑秒杀场景
+**使用分布式锁来支撑秒杀场景的具体做法是，先让客户端向 Redis 申请分布式锁，只有拿到锁的客户端才能执行库存查验和库存扣减。**这样一来，大量的秒杀请求就会在争夺分布式锁时被过滤掉。而且，库存查验和扣减也不用使用原子操作了，因为多个并发客户端只有一个客户端能够拿到锁，已经保证了客户端并发访问的互斥性。
+![](images/2021-07-20-11-14-39.png)
+## 37 如何应对数据倾斜
+
+
+
+## 39 Redis6.0 的新特性：多线程，客户端缓存与安全
+Redis 官方在2020年 5 月份正式推出了 6.0 版本，这个版本中有很多的新特性。所以，6.0 刚刚推出，就受到了业界的广泛关注。Redis 6.0 中的几个关键新特性，分别是面向网络处理的多 IO 线程、客户端缓存、细粒度的权限控制，以及 RESP 3 协议的使用。
+
+
+### 从单线程处理网络请求到多线程处理
+
+在 Redis 6.0 中，非常受关注的第一个新特性就是多线程。这是因为，Redis 一直被大家熟知的就是它的单线程架构，虽然有些命令操作可以用后台线程或子进程执行（比如数据删除、快照生成、AOF 重写），但是，从网络 IO 处理到实际的读写命令处理，都是由**单个线程完成**的。
+随着网络硬件的性能提升，Redis 的性能瓶颈有时会出现在网络 IO 的处理上，也就是说，**单个主线程处理网络请求的速度跟不上底层网络硬件的速度。**
+
+因此采用了**多个IO线程来处理网络请求**，提高网络请求处理的并行度。Redis 6.0就是采用的这种方法。
+
+
+但是，Redis 的多IO线程只是用来处理网络请求的，对于对写命令，Redis 仍然使用单线程来处理。这是因为，Redis 处理请求时，网络处理经常是瓶颈，通过多个IO线程并行处理网络操作，可以提升实例的整体处理性能。 而继续使用单线程执行命令操作，就不用为了保证Lua脚本，事务的原子性，额外开发多线程互斥机制。
+
+可以把主线程和多IO线程的协作分为四个阶段。
+
+#### 阶段一：服务端和客户端建立Socket连接，并分配处理线程。
+首先，主线程负责接收建立连接请求。当有客户端请求和实例建立Socket连接时，主线程会创建和客户端的连接，并把Socket 放入全局等待队列中。紧接着，主线程通过轮询方法把Socket连接分配给IO线程。
+
+#### 阶段二：IO线程读取并解析请求
+主线程一旦把 Socket 分配给 IO 线程，就会进入阻塞状态，等待 IO 线程完成客户端请求读取和解析。因为有多个 IO 线程在并行处理，所以，这个过程很快就可以完成。
+
+#### 阶段三：主线程执行请求操作
+等到 IO 线程解析完请求，主线程还是会以单线程的方式执行这些命令操作。下面这张图显示了刚才介绍的这三个阶段，你可以看下，加深理解。
+![](images/2021-07-20-11-27-15.png)
+
+
+#### 阶段四：IO线程回写Socket 和主线程清空全局队列
+当主线程执行完请求操作后，会把需要返回的结果写入缓冲区，然后，主线程会阻塞等待 IO 线程把这些结果回写到 Socket 中，并返回给客户端。
+和 IO 线程读取和解析请求一样，IO 线程回写 Socket 时，也是有多个线程在并发执行，所以回写 Socket 的速度也很快。等到 IO 线程回写 Socket 完毕，主线程会清空全局队列，等待客户端的后续请求。
+![](images/2021-07-20-11-28-08.png)
+
+
+## 40 Redis 的下一步：基于NVM内存的实践
