--- a/Java/设计模式/设计模式.md
+++ b/Java/设计模式/设计模式.md
@@ -1,5 +1,24 @@
 #设计模式概述
 
+面向对象是一种编程思想，包括三大特性和六大原则，其中，三大特性指的是 **封装，继承，多态；**
+
+六大原则指的是“单一职责原则，开闭式原则，迪米特原则，里氏替换原则，依赖倒置原则以及接口隔离原则”。
+
+单一职责原则：类只承担一个原则
+
+开闭原则：对扩展开放，对修改关闭
+
+迪米特原则：
+
+里氏替换：
+
+依赖倒置原则：
+
+接口隔离原则:
+一个类对另一个类的依赖应该建立在最小的接口上。
+
+
+
 设计模式有两种分类方法，即根据模式的目的来分和根据模式的作用的范围来分。
 
 * 根据目的来分
